# CCF

./: CMakeLists.txt
doc/host_config_schema/: cchost_config.json
docker/: ccf_pfci
include/ccf/node/: startup_config.h
src/common/: configuration.h
src/consensus/aft/: raft.h  raft_types.h
src/ds/: actors.h
src/host/: configuration.h  main.cpp  signal.h
src/http/: curl.h
src/indexer/: CMakeLists.txt  config.h  indexer_state.cpp  indexer_state.h  main.cpp  sig_term.h
src/node/: node_state.h  share_manager.h
src/node/rpc/: node_frontend.h
tests/: config.jinja  e2e_operations.py  schema.py
tests/infra/: network.py  node.py  remote.py
